--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dependable": "^1.1.0",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
+    "express-promise-router": "^4.0.1",
     "lodash": "^4.17.19"
   }
 }
