--- a/package.json
+++ b/package.json
@@ -18,10 +18,18 @@
   "homepage": "https://github.com/amitrathee987/socket_chat_app#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "connect-flash": "^0.1.1",
+    "connect-mongo": "^3.2.0",
+    "cookie-parser": "^1.4.5",
     "dependable": "^1.1.0",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
     "express-promise-router": "^4.0.1",
-    "lodash": "^4.17.19"
+    "express-session": "^1.17.1",
+    "express-validator": "^6.6.1",
+    "lodash": "^4.17.19",
+    "mongoose": "^5.9.27",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0"
   }
 }
