add files in local directory with formidable

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express-promise-router": "^4.0.1",
     "express-session": "^1.17.1",
     "express-validator": "^5.2.0",
+    "formidable": "^1.2.2",
     "lodash": "^4.17.19",
     "mongoose": "^5.9.27",
     "passport": "^0.4.1",
