--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "multer-s3": "^2.9.0",
     "passport": "^0.4.1",
     "passport-facebook": "^3.0.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "socket.io": "^2.3.0"
   }
 }
